# Envr

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  SUPPORT.md  SUPPORT.zh-CN.md  deny.toml  error.txt  tasks.md  tasks_gui.md
crates/envr-cli/: Cargo.toml
crates/envr-cli/shell/: hook.bash.inc  hook.powershell.inc  hook.zsh.inc
crates/envr-cli/src/: cli.rs  cli_help.rs  codes.rs  command_outcome.rs  lib.rs  main.rs  output.rs  presenter.rs  run_context.rs  runtime_session.rs
crates/envr-cli/src/app/: mod.rs  runtime_installation.rs
crates/envr-cli/src/cli/: command_spec.rs  global.rs  metadata.rs  mod.rs
crates/envr-cli/src/commands/: alias_cmd.rs  bundle_cmd.rs  cache_cmd.rs  check.rs  child_env.rs  cli_install_progress.rs  common.rs  completion_cmd.rs  config_cmd.rs  current.rs  deactivate_cmd.rs  debug_cmd.rs  diagnostics.rs  dispatch.rs  dispatch_macros.rs  dispatch_non_runtime.rs  dispatch_runtime.rs  dispatch_runtime_installation.rs  dispatch_runtime_misc.rs  dispatch_runtime_project.rs  doctor.rs  doctor_analyzer.rs  doctor_fixer.rs  doctor_presenter.rs  dry_run_env.rs  env_cmd.rs  env_overrides.rs  exec.rs  help_cmd.rs  hook_cmd.rs  import_export.rs  init.rs  install.rs  list.rs  mod.rs  profile_cmd.rs  project_cmd.rs  project_status.rs  prune.rs  read_cmd.rs  (+16 more)
crates/envr-cli/tests/: alias_json_contract.rs  argv_parse_json.rs  automation_matrix.rs  bundle_flags.rs  child_env.rs  cli_harness.rs  config_debug_profile_json_contract.rs  diagnostics_export.rs  e2e_flows.rs  er_env_forward.rs  exec_cmd.rs  exec_run_env_integration.rs  failure_contract_guards.rs  failure_data_tiers_contract.rs  final_sprint_json_contract.rs  governance_index_contract.rs  help.rs  help_i18n_structure.rs  hook_cmd.rs  hook_env_import_export_json_contract.rs  init_config_why_json_contract.rs  json_emit_ok_message_schema_files.rs  json_envelope.rs  json_schema_contract.rs  json_stdout_with_rust_log.rs  list_current_smoke.rs  metrics_contract.rs  metrics_dictionary_contract.rs  ok_message_i18n_contract.rs  project_cmds.rs  remote_zig_offline.rs  run_cmd.rs  run_env_builder.rs  schema_index_contract.rs  short_aliases.rs  structured_error_codes_contract.rs  user_alias_argv.rs
crates/envr-cli/tests/i18n/: cli_help_locale.rs
crates/envr-config/: Cargo.toml
crates/envr-config/benches/: project_config.rs
crates/envr-config/src/: aliases.rs  env_context.rs  lib.rs  php_layout.rs  project_config.rs  project_extends.rs  runtime_path_proxy.rs  settings.rs  settings_schema.rs
crates/envr-config/src/settings/: defaults.rs  general_config.rs  locale_mirror.rs  runtime_disk_flags.rs  runtime_js_py_go.rs  runtime_jvm.rs  runtime_lang_core.rs  runtime_long_tail.rs  runtime_root_cache.rs  runtime_sources.rs  runtime_web_tooling.rs  rustup_policy.rs  settings_io.rs  settings_store.rs  storage_utils.rs  ui_config.rs  validation.rs
crates/envr-config/templates/: settings.schema.zh.toml
crates/envr-core/: Cargo.toml
crates/envr-core/src/: i18n.rs  lib.rs  logging.rs  runtime_path_proxy.rs  shim_service.rs
crates/envr-download/: Cargo.toml
crates/envr-download/src/: blocking.rs  checksum.rs  engine.rs  extract.rs  global_limit.rs  lib.rs  stats.rs  task.rs
crates/envr-download/tests/: control_plane_integration.rs
crates/envr-gui/: Cargo.toml
crates/envr-gui/src/: app.rs  download_runner.rs  gui_ops.rs  icons.rs  main.rs  runtime_exec.rs  service.rs  theme.rs  widget_styles.rs
crates/envr-i18n-lint/: Cargo.toml
crates/envr-i18n-lint/src/: main.rs
crates/envr-mirror/: Cargo.toml
crates/envr-mirror/src/: lib.rs  probe.rs  registry.rs  resolver.rs  strategy.rs
crates/envr-resolver/: Cargo.toml
crates/envr-resolver/src/: lib.rs  merge_env.rs  missing_pins.rs  pin_spec.rs  project_file.rs  run_home.rs
crates/envr-runtime-babashka/: Cargo.toml
crates/envr-runtime-babashka/src/: index.rs  lib.rs  manager.rs
crates/envr-runtime-bun/: Cargo.toml
crates/envr-runtime-bun/src/: index.rs  lib.rs  manager.rs  mirror.rs
crates/envr-runtime-clojure/: Cargo.toml
crates/envr-runtime-clojure/src/: index.rs  lib.rs  manager.rs  releases_url.rs
crates/envr-runtime-crystal/: Cargo.toml
crates/envr-runtime-crystal/src/: index.rs  lib.rs  manager.rs  releases_url.rs
crates/envr-runtime-deno/: Cargo.toml
crates/envr-runtime-deno/src/: index.rs  lib.rs  manager.rs
crates/envr-runtime-dotnet/: Cargo.toml
crates/envr-runtime-dotnet/src/: index.rs  lib.rs  manager.rs
crates/envr-runtime-elm/: Cargo.toml
crates/envr-runtime-elm/src/: index.rs  lib.rs  manager.rs
crates/envr-runtime-flutter/: Cargo.toml
crates/envr-runtime-flutter/src/: index.rs  lib.rs  manager.rs
crates/envr-runtime-github-release/: Cargo.toml
crates/envr-runtime-github-release/src/: lib.rs
crates/envr-runtime-go/: Cargo.toml
crates/envr-runtime-go/src/: index.rs  lib.rs  manager.rs
crates/envr-runtime-haxe/: Cargo.toml
crates/envr-runtime-haxe/src/: index.rs  lib.rs  manager.rs
crates/envr-runtime-luau/: Cargo.toml
crates/envr-runtime-luau/src/: index.rs  lib.rs  manager.rs
crates/envr-runtime-node/: Cargo.toml
crates/envr-runtime-node/src/: index.rs  lib.rs  manager.rs
crates/envr-runtime-python/: Cargo.toml
crates/envr-runtime-python/src/: index.rs  lib.rs  manager.rs
crates/envr-runtime-racket/: Cargo.toml
crates/envr-runtime-racket/src/: index.rs  lib.rs  manager.rs
crates/envr-runtime-registry/: Cargo.toml
crates/envr-runtime-registry/src/: lib.rs
crates/envr-runtime-rust/: Cargo.toml
crates/envr-runtime-rust/src/: installer.rs  lib.rs  manager.rs
crates/envr-shim/: Cargo.toml
crates/envr-shim-core/: Cargo.toml
crates/envr-shim-core/benches/: resolve_core_shim_command.rs  resolve_runtime_home.rs  shim_settings_snapshot.rs
crates/envr-shim-core/src/: lib.rs  resolve.rs
crates/envr-shim/benches/: node_engines_hint.rs
crates/envr-shim/src/: main.rs  node_engines_hint.rs  shim_i18n.rs
crates/envr-shim/tests/: smoke.rs  smoke_windows.rs
docs/: README.md  (+2 more)
(+539 files in other folders)
