[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"
rust-version = "1.88"

[workspace.dependencies]
# serialization & config
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }

# async/runtime/network
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "fs", "process", "time", "sync"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip", "json", "system-proxy"] }
ureq = { version = "2.10", default-features = false, features = ["tls"] }
sys-locale = { version = "0.3.2", default-features = false }

# cli/error/support
thiserror = { version = "2", default-features = false }
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage"] }
clap_complete = { version = "4", default-features = false }
regex = { version = "1", default-features = false, features = ["std", "unicode"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "std", "json"] }
tracing-appender = { version = "0.2", default-features = false }
indicatif = { version = "0.18", default-features = false }

# archives
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
tar = { version = "0.4", default-features = false }
xz2 = { version = "0.1.7" }
sha2 = { version = "0.10", default-features = false, features = ["std"] }

# test toolchain
tempfile = { version = "3", default-features = false }
assert_cmd = { version = "2", default-features = false }
proptest = { version = "1", default-features = false, features = ["std"] }
wiremock = "0.6"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
jsonschema = { version = "0.46", default-features = false }

# native folder picker (GUI)
rfd = { version = "0.15.4", default-features = false, features = ["xdg-portal", "tokio"] }

[workspace.metadata.envr.dependency_policy]
source_doc = "refactor docs/07-依赖选择与原则.md"
default_features = "disabled_by_default"
tls_backend = "reqwest:rustls-tls"
forbidden_default_features = ["native-tls", "reqwest/default-tls"]

[profile.release.package.envr-shim]
opt-level = "z"
codegen-units = 1
strip = "symbols"
