[package]
name = "envr-cli"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "envr"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
envr-config = { path = "../envr-config" }
envr-core = { path = "../envr-core" }
envr-domain = { path = "../envr-domain" }
envr-error = { path = "../envr-error" }
envr-platform = { path = "../envr-platform" }
envr-shim-core = { path = "../envr-shim-core" }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
