[package]
name = "envr-cli"
version = "0.1.0"
edition = "2024"
license.workspace = true
autobins = false

[lib]
name = "envr_cli"
path = "src/lib.rs"

[[bin]]
name = "envr"
path = "src/main.rs"

[[bin]]
name = "er"
path = "src/bin/er.rs"

[[test]]
name = "i18n_cli_help_locale"
path = "tests/i18n/cli_help_locale.rs"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
envr-config = { path = "../envr-config" }
envr-core = { path = "../envr-core" }
envr-domain = { path = "../envr-domain" }
envr-error = { path = "../envr-error" }
envr-platform = { path = "../envr-platform" }
envr-resolver = { path = "../envr-resolver" }
envr-runtime-rust = { path = "../envr-runtime-rust" }
envr-runtime-lua = { path = "../envr-runtime-lua" }
envr-runtime-node = { path = "../envr-runtime-node" }
envr-shim-core = { path = "../envr-shim-core" }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
envr-runtime-zig = { path = "../envr-runtime-zig" }
jsonschema = { workspace = true }
regex = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
