[package]
name = "envr-config"
version = "0.1.0"
edition = "2024"

[dependencies]
envr-error = { path = "../envr-error" }
envr-platform = { path = "../envr-platform" }
serde = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
