[package]
name = "envr-config"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
envr-error = { path = "../envr-error" }
envr-platform = { path = "../envr-platform" }
serde = { workspace = true }
sys-locale = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
