[package]
name = "envr-config"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
envr-domain = { path = "../envr-domain" }
envr-error = { path = "../envr-error" }
envr-platform = { path = "../envr-platform" }
serde = { workspace = true }
sys-locale = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "project_config"
harness = false
