[package]
name = "envr-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[[test]]
name = "i18n_gui_tr_key"
path = "tests/i18n/gui_tr_key.rs"

[dependencies]
envr-config = { path = "../envr-config" }
envr-error = { path = "../envr-error" }
envr-domain = { path = "../envr-domain" }
envr-platform = { path = "../envr-platform" }
envr-runtime-node = { path = "../envr-runtime-node" }
envr-runtime-python = { path = "../envr-runtime-python" }
envr-runtime-java = { path = "../envr-runtime-java" }
envr-runtime-go = { path = "../envr-runtime-go" }
envr-runtime-rust = { path = "../envr-runtime-rust" }
envr-runtime-ruby = { path = "../envr-runtime-ruby" }
envr-runtime-elixir = { path = "../envr-runtime-elixir" }
envr-runtime-php = { path = "../envr-runtime-php" }
envr-runtime-deno = { path = "../envr-runtime-deno" }
envr-runtime-bun = { path = "../envr-runtime-bun" }
envr-runtime-dotnet = { path = "../envr-runtime-dotnet" }
envr-shim-core = { path = "../envr-shim-core" }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

