[package]
name = "envr-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[[test]]
name = "i18n_gui_tr_key"
path = "tests/i18n/gui_tr_key.rs"

[dependencies]
envr-config = { path = "../envr-config" }
envr-error = { path = "../envr-error" }
envr-domain = { path = "../envr-domain" }
envr-platform = { path = "../envr-platform" }
envr-runtime-node = { path = "../envr-runtime-node" }
envr-runtime-python = { path = "../envr-runtime-python" }
envr-runtime-java = { path = "../envr-runtime-java" }
envr-runtime-kotlin = { path = "../envr-runtime-kotlin" }
envr-runtime-scala = { path = "../envr-runtime-scala" }
envr-runtime-clojure = { path = "../envr-runtime-clojure" }
envr-runtime-groovy = { path = "../envr-runtime-groovy" }
envr-runtime-terraform = { path = "../envr-runtime-terraform" }
envr-runtime-v = { path = "../envr-runtime-v" }
envr-runtime-dart = { path = "../envr-runtime-dart" }
envr-runtime-flutter = { path = "../envr-runtime-flutter" }
envr-runtime-go = { path = "../envr-runtime-go" }
envr-runtime-rust = { path = "../envr-runtime-rust" }
envr-runtime-ruby = { path = "../envr-runtime-ruby" }
envr-runtime-elixir = { path = "../envr-runtime-elixir" }
envr-runtime-erlang = { path = "../envr-runtime-erlang" }
envr-runtime-php = { path = "../envr-runtime-php" }
envr-runtime-deno = { path = "../envr-runtime-deno" }
envr-runtime-bun = { path = "../envr-runtime-bun" }
envr-runtime-dotnet = { path = "../envr-runtime-dotnet" }
envr-runtime-zig = { path = "../envr-runtime-zig" }
envr-runtime-julia = { path = "../envr-runtime-julia" }
envr-runtime-lua = { path = "../envr-runtime-lua" }
envr-runtime-nim = { path = "../envr-runtime-nim" }
envr-runtime-crystal = { path = "../envr-runtime-crystal" }
envr-runtime-perl = { path = "../envr-runtime-perl" }
envr-runtime-rlang = { path = "../envr-runtime-rlang" }
envr-shim-core = { path = "../envr-shim-core" }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

