[package]
name = "envr-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = ["default-runtime-set"]
default-runtime-set = [
    "runtime-node",
    "runtime-python",
    "runtime-java",
    "runtime-kotlin",
    "runtime-scala",
    "runtime-clojure",
    "runtime-groovy",
    "runtime-terraform",
    "runtime-v",
    "runtime-odin",
    "runtime-purescript",
    "runtime-elm",
    "runtime-gleam",
    "runtime-racket",
    "runtime-dart",
    "runtime-flutter",
    "runtime-go",
    "runtime-rust",
    "runtime-ruby",
    "runtime-elixir",
    "runtime-erlang",
    "runtime-php",
    "runtime-deno",
    "runtime-bun",
    "runtime-dotnet",
    "runtime-zig",
    "runtime-julia",
    "runtime-janet",
    "runtime-c3",
    "runtime-babashka",
    "runtime-sbcl",
    "runtime-haxe",
    "runtime-lua",
    "runtime-nim",
    "runtime-crystal",
    "runtime-perl",
    "runtime-unison",
    "runtime-rlang",
]
runtime-node = ["envr-runtime-registry/runtime-node"]
runtime-python = ["envr-runtime-registry/runtime-python"]
runtime-java = ["envr-runtime-registry/runtime-java"]
runtime-kotlin = ["envr-runtime-registry/runtime-kotlin"]
runtime-scala = ["envr-runtime-registry/runtime-scala"]
runtime-clojure = ["envr-runtime-registry/runtime-clojure"]
runtime-groovy = ["envr-runtime-registry/runtime-groovy"]
runtime-terraform = ["envr-runtime-registry/runtime-terraform"]
runtime-v = ["envr-runtime-registry/runtime-v"]
runtime-odin = ["envr-runtime-registry/runtime-odin"]
runtime-purescript = ["envr-runtime-registry/runtime-purescript"]
runtime-elm = ["envr-runtime-registry/runtime-elm"]
runtime-gleam = ["envr-runtime-registry/runtime-gleam"]
runtime-racket = ["envr-runtime-registry/runtime-racket"]
runtime-dart = ["envr-runtime-registry/runtime-dart"]
runtime-flutter = ["envr-runtime-registry/runtime-flutter"]
runtime-go = ["envr-runtime-registry/runtime-go"]
runtime-rust = ["envr-runtime-registry/runtime-rust"]
runtime-ruby = ["envr-runtime-registry/runtime-ruby"]
runtime-elixir = ["envr-runtime-registry/runtime-elixir"]
runtime-erlang = ["envr-runtime-registry/runtime-erlang"]
runtime-php = ["envr-runtime-registry/runtime-php"]
runtime-deno = ["envr-runtime-registry/runtime-deno"]
runtime-bun = ["envr-runtime-registry/runtime-bun"]
runtime-dotnet = ["envr-runtime-registry/runtime-dotnet"]
runtime-zig = ["envr-runtime-registry/runtime-zig"]
runtime-julia = ["envr-runtime-registry/runtime-julia"]
runtime-janet = ["envr-runtime-registry/runtime-janet"]
runtime-c3 = ["envr-runtime-registry/runtime-c3"]
runtime-babashka = ["envr-runtime-registry/runtime-babashka"]
runtime-sbcl = ["envr-runtime-registry/runtime-sbcl"]
runtime-haxe = ["envr-runtime-registry/runtime-haxe"]
runtime-lua = ["envr-runtime-registry/runtime-lua"]
runtime-nim = ["envr-runtime-registry/runtime-nim"]
runtime-crystal = ["envr-runtime-registry/runtime-crystal"]
runtime-perl = ["envr-runtime-registry/runtime-perl"]
runtime-unison = ["envr-runtime-registry/runtime-unison"]
runtime-rlang = ["envr-runtime-registry/runtime-rlang"]

[[test]]
name = "i18n_gui_tr_key"
path = "tests/i18n/gui_tr_key.rs"

[dependencies]
envr-config = { path = "../envr-config" }
envr-error = { path = "../envr-error" }
envr-domain = { path = "../envr-domain" }
envr-platform = { path = "../envr-platform" }
envr-runtime-registry = { path = "../envr-runtime-registry", default-features = false }
envr-shim-core = { path = "../envr-shim-core" }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

