[package]
name = "envr-download"
version = "0.1.0"
edition = "2024"

[dependencies]
envr-error = { path = "../envr-error" }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
zip = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
xz2 = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
