[package]
name = "envr-gui"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
envr-core = { path = "../envr-core" }
envr-domain = { path = "../envr-domain" }
envr-download = { path = "../envr-download" }
envr-config = { path = "../envr-config" }
envr-error = { path = "../envr-error" }
envr-platform = { path = "../envr-platform" }
envr-ui = { path = "../envr-ui" }
reqwest = { workspace = true }
iced = { version = "0.13", default-features = false, features = ["wgpu", "tiny-skia", "tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
