[package]
name = "envr-gui"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
envr-core = { path = "../envr-core" }
envr-domain = { path = "../envr-domain" }
envr-download = { path = "../envr-download" }
envr-config = { path = "../envr-config" }
envr-error = { path = "../envr-error" }
envr-platform = { path = "../envr-platform" }
envr-ui = { path = "../envr-ui" }
envr-runtime-rust = { path = "../envr-runtime-rust" }
reqwest = { workspace = true }
iced = { version = "0.14", default-features = false, features = ["wgpu", "tiny-skia", "tokio", "svg"] }
rfd = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
