[package]
name = "envr-mirror"
version = "0.1.0"
edition = "2024"

[dependencies]
envr-error = { path = "../envr-error" }
envr-config = { path = "../envr-config" }
envr-platform = { path = "../envr-platform" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
