[package]
name = "envr-runtime-babashka"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
envr-config = { path = "../envr-config" }
envr-domain = { path = "../envr-domain" }
envr-error = { path = "../envr-error" }
envr-platform = { path = "../envr-platform" }
envr-download = { path = "../envr-download" }
envr-runtime-github-release = { path = "../envr-runtime-github-release" }
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
