[package]
name = "envr-runtime-bun"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
envr-domain = { path = "../envr-domain" }
envr-error = { path = "../envr-error" }
envr-platform = { path = "../envr-platform" }
envr-download = { path = "../envr-download" }
envr-config = { path = "../envr-config" }
envr-mirror = { path = "../envr-mirror" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
tempfile = { workspace = true }
