[package]
name = "envr-runtime-dotnet"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
envr-config = { path = "../envr-config" }
envr-domain = { path = "../envr-domain" }
envr-error = { path = "../envr-error" }
envr-download = { path = "../envr-download" }
envr-platform = { path = "../envr-platform" }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
