[package]
name = "envr-runtime-github-release"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
envr-error = { path = "../envr-error" }
regex.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
