[package]
name = "envr-runtime-rust"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
envr-config = { path = "../envr-config" }
envr-domain = { path = "../envr-domain" }
envr-download = { path = "../envr-download" }
envr-error = { path = "../envr-error" }
envr-platform = { path = "../envr-platform" }
reqwest = { workspace = true, features = ["blocking"] }
tempfile = { workspace = true }
