[package]
name = "envr-shim-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
envr-config = { path = "../envr-config" }
envr-domain = { path = "../envr-domain" }
envr-error = { path = "../envr-error" }
envr-platform = { path = "../envr-platform" }
tempfile = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
temp-env = "0.3"

[[bench]]
name = "resolve_runtime_home"
harness = false

[[bench]]
name = "shim_settings_snapshot"
harness = false

[[bench]]
name = "resolve_core_shim_command"
harness = false
