[package]
name = "envr-shim"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
envr-config = { path = "../envr-config" }
envr-error = { path = "../envr-error" }
envr-platform = { path = "../envr-platform" }
envr-shim-core = { path = "../envr-shim-core" }
semver = { version = "1", default-features = false, features = ["std"] }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "node_engines_hint"
harness = false
